--- a/trunk/templates/vamshop_table/admin/mail/russian/change_order_mail.html
+++ b/trunk/templates/vamshop_table/admin/mail/russian/change_order_mail.html
@@ -5,7 +5,7 @@
   <tr> 
     <td><font size="2" face="Verdana, Arial, Helvetica, sans-serif"><strong>Уважаемый покупатель!</strong><br>
       <br>
-      Статус Вашего заказа изменён.<br> 
+      Статус Вашего заказа номер {$ORDER_NR} изменён.<br> 
       {if $NOTIFY_COMMENTS}<br>
 Комментарии: 
 {$NOTIFY_COMMENTS}
