--- a/trunk/templates/vamshop/stylesheet.css
+++ b/trunk/templates/vamshop/stylesheet.css
@@ -605,6 +605,94 @@ div#navigation
 
 /*- /Бокс быстрый заказ */
 
+/*- Бокс авторы */
+#boxAuthors
+   {
+     text-align: left;
+     margin-bottom: 0.2em;
+     margin-top: 0.2em;
+     margin-right: 0.2em; /* отступ от правого края браузера */
+     padding-top: 0.2em;
+     padding-bottom: 0.4em; /* отступ от края бокса, т.е. от пунктирной линии */
+  	  border-bottom-width: 1px;
+	  border-bottom-style: dashed;
+     border-bottom-color: #67748B;
+   }
+
+/*- Заголовок бокса авторы */
+#boxAuthors h5 
+   {
+     display: block;
+     font: 12px Tahoma, Verdana, Arial, sans-serif;
+     font-weight: bold;
+     color: #006600;
+     border-bottom: 2px #e5e5e5 solid;
+     background: url(img/box.gif) no-repeat left center;
+     margin: 0 0 .4em .3em;
+     padding: .1em 0 0 16px;
+  }
+/*- /Заголовок бокса авторы */
+
+/*- Содержимое бокса авторы */
+#boxAuthorsContent 
+   {
+     padding-left: 1em;
+  }
+
+#boxAuthorsContent p 
+   {
+     margin: 0 0 0 0;
+     text-align: left;
+  }
+
+/*- /Содержимое бокса авторы */
+
+/*- /Бокс авторы */
+
+/*- Бокс статьи */
+#boxArticles
+   {
+     text-align: left;
+     margin-bottom: 0.2em;
+     margin-top: 0.2em;
+     margin-right: 0.2em; /* отступ от правого края браузера */
+     padding-top: 0.2em;
+     padding-bottom: 0.4em; /* отступ от края бокса, т.е. от пунктирной линии */
+  	  border-bottom-width: 1px;
+	  border-bottom-style: dashed;
+     border-bottom-color: #67748B;
+   }
+
+/*- Заголовок бокса статьи */
+#boxArticles h5 
+   {
+     display: block;
+     font: 12px Tahoma, Verdana, Arial, sans-serif;
+     font-weight: bold;
+     color: #006600;
+     border-bottom: 2px #e5e5e5 solid;
+     background: url(img/box.gif) no-repeat left center;
+     margin: 0 0 .4em .3em;
+     padding: .1em 0 0 16px;
+  }
+/*- /Заголовок бокса статьи */
+
+/*- Содержимое бокса статьи */
+#boxArticlesContent 
+   {
+     padding-left: 1em;
+  }
+
+#boxArticlesContent p 
+   {
+     margin: 0 0 0 0;
+     text-align: left;
+  }
+
+/*- /Содержимое бокса статьи */
+
+/*- /Бокс статьи */
+
 /*- Бокс просмотренные товары */
 #boxLastViewed
    {
