--- a/trunk/templates/vamshop/module/create_account.html
+++ b/trunk/templates/vamshop/module/create_account.html
@@ -53,7 +53,7 @@
 </fieldset>
 <fieldset class="form">
 <legend>{#title_password#}</legend>
-<p><label for="password" title="{$ENTRY_PASSWORD_ERROR}">{#text_password#}</label> {$INPUT_PASSWORD}</p>
+<p><label for="pass" title="{$ENTRY_PASSWORD_ERROR}">{#text_password#}</label> {$INPUT_PASSWORD}</p>
 <p><label for="confirmation" title="{$ENTRY_PASSWORD_ERROR_NOT_MATCHING}">{#text_confirmation#}</label> {$INPUT_CONFIRMATION}</p>
 </fieldset>
 <!-- /форма -->
