Добавлена ссылка на xt-commerce.com

--- a/templates/vamshop/index.html
+++ b/templates/vamshop/index.html
@@ -94,3 +94,7 @@
 
 </div>
 <!-- /Контейнер -->
+
+<div id="copyright">
+eCommerce Engine ©2007 <a href="http://xt-commerce.com" target="_blank">xt:Commerce</a>
+</div>
