Добавлен новый css класс copyright

--- a/templates/vamshop/index.html
+++ b/templates/vamshop/index.html
@@ -95,6 +95,6 @@
 </div>
 <!-- /Контейнер -->
 
-<div id="copyright">
+<div class="copyright">
 eCommerce Engine ©2007 <a href="http://xt-commerce.com" target="_blank">xt:Commerce</a>
 </div>
