--- a/templates/vamshop/stylesheet.css
+++ b/templates/vamshop/stylesheet.css
@@ -1735,6 +1735,17 @@ div#copyright
      padding-top: 0.5em;
      padding-bottom: 0.5em;
    }
+
+.copyright
+   {
+     clear: left;
+     background: #f1f1f6;
+     width: 100%;
+     text-align: center;
+     color: #000;
+     padding-top: 0.5em;
+     padding-bottom: 0.5em;
+   }
 /*- /Информация о магазине */
 
 /*- Формы */
