--- a/trunk/templates/vamshop/module/product_reviews_write.html
+++ b/trunk/templates/vamshop/module/product_reviews_write.html
@@ -1,5 +1,8 @@
 {config_load file="$language/lang_$language.conf" section="reviews"}
 <h1>{#heading_reviews_write#}</h1>
+{if $captcha_error}
+<div class="contacterror">{$captcha_error}</div>
+{/if}
 {if $error}
 <div class="contacterror">{$error}</div>
 {else}
@@ -20,6 +23,8 @@
 	<p>{#text_input#} {$INPUT_TEXT}</p>
 	<p>{#text_note#}</p>
 	<p>{#text_rating#} <span class="bold">{#text_bad#}</span>{$INPUT_RATING}<span class="bold">{#text_good#}</span></p>
+   <p>{#text_sec_code#} {$VVIMG}</p>
+   <p>{#text_sec_code_text#} {$INPUT_CODE}</p>
 </fieldset>
 <!-- /форма -->
 
