--- a/trunk/templates/vamshop/boxes/box_cart.html
+++ b/trunk/templates/vamshop/boxes/box_cart.html
@@ -1,6 +1,8 @@
 {config_load file="$language/lang_$language.conf" section="boxes"}
 {if $deny_cart neq 'true'}
 <!-- Бокс корзина -->
+<script type="text/javascript" src="jscript/jscript_ajax_cart.js"></script>
+<div id="divShoppingCart">
 <div id="boxCart">
 <b class="top"><b class="b1"></b><b class="b2"></b><b class="b3"></b><b class="b4"></b><b class="b5"></b></b>
 <div class="boxheader">
@@ -41,6 +43,7 @@
 
 </div>
 <b class="bottom"><b class="b5b"></b><b class="b4b"></b><b class="b3b"></b><b class="b2b"></b><b class="b1b"></b></b>
+</div>
 </div>
 <!-- /Бокс корзина -->
 {/if}
