Добавлен новый модуль - safe login, добавляется каптча на страницу login.php в случае если пользователь X раз неправильно указал e-mail и/или пароль

--- a/templates/vamshop/module/login.html
+++ b/templates/vamshop/module/login.html
@@ -33,6 +33,7 @@
 <!-- форма -->
 <fieldset class="form">
 <legend>{#title_returning#}</legend>
+{if $VVIMG !=''}<p>{$VVIMG} {$INPUT_CODE}</p>{/if}
 <p>{#text_email#} {$INPUT_MAIL}</p>
 <p>{#text_password#} {$INPUT_PASSWORD}</p>
 </fieldset>
