--- a/trunk/templates/vamshop/module/content.html
+++ b/trunk/templates/vamshop/module/content.html
@@ -6,6 +6,10 @@
 <b class="b1"></b><b class="b2"></b><b class="b3"></b><b class="b4"></b>
 <!-- Содержимое страницы -->
 <div class="pagecontent">
+
+{foreach name=aussen item=sub_pages from=$sub_pages_content}&nbsp;&nbsp;&nbsp;<a href="{$sub_pages.PAGE_LINK}">{$sub_pages.PAGE_TITLE}</a><br />
+{/foreach} 
+
 {if $file}
   {$file}
 {else}
