--- a/trunk/templates/vamshop/stylesheet.css
+++ b/trunk/templates/vamshop/stylesheet.css
@@ -694,6 +694,50 @@ div#navigation
 
 /*- /Бокс статьи */
 
+/*- Бокс новые статьи */
+#boxArticlesNew
+   {
+     text-align: left;
+     margin-bottom: 0.2em;
+     margin-top: 0.2em;
+     margin-right: 0.2em; /* отступ от правого края браузера */
+     padding-top: 0.2em;
+     padding-bottom: 0.4em; /* отступ от края бокса, т.е. от пунктирной линии */
+  	  border-bottom-width: 1px;
+	  border-bottom-style: dashed;
+     border-bottom-color: #67748B;
+   }
+
+/*- Заголовок бокса новые статьи */
+#boxArticlesNew h5 
+   {
+     display: block;
+     font: 12px Tahoma, Verdana, Arial, sans-serif;
+     font-weight: bold;
+     color: #006600;
+     border-bottom: 2px #e5e5e5 solid;
+     background: url(img/box.gif) no-repeat left center;
+     margin: 0 0 .4em .3em;
+     padding: .1em 0 0 16px;
+  }
+/*- /Заголовок бокса новые статьи */
+
+/*- Содержимое бокса новые статьи */
+#boxArticlesNewContent 
+   {
+     padding-left: 1em;
+  }
+
+#boxArticlesNewContent p 
+   {
+     margin: 0 0 0 0;
+     text-align: left;
+  }
+
+/*- /Содержимое бокса новые статьи */
+
+/*- /Бокс новые статьи */
+
 /*- Бокс просмотренные товары */
 #boxLastViewed
    {
