--- a/trunk/templates/vamshop/stylesheet.css
+++ b/trunk/templates/vamshop/stylesheet.css
@@ -2296,5 +2296,11 @@ li.ajaxAddQuickie
 	  background-color: #ffb3b5;
      border: 1px solid red;
    }
-   
+
+.messageStack
+   {
+     background-color: #ffb3b5; 
+     padding: 0.5em 0.5em 0.5em 0.5em; 
+   }
+      
 /*]]>*/
