--- a/trunk/templates/vamshop/boxes/box_best_sellers.html
+++ b/trunk/templates/vamshop/boxes/box_best_sellers.html
@@ -1,7 +1,6 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
 <!-- Бокс лучшие товары -->
 <div id="boxBestsellers">
-<h5>{#heading_best_sellers#}</h5>
+<h5>[[Best seller]]</h5>
 
 <div id="boxBestsellersContent">
 
