--- a/trunk/templates/vamshop/boxes/box_cart.html
+++ b/trunk/templates/vamshop/boxes/box_cart.html
@@ -1,4 +1,3 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
 {if $deny_cart neq 'true'}
 <!-- Бокс корзина -->
 <script type="text/javascript" src="jscript/jscript_ajax_cart.js"></script>
@@ -6,7 +5,7 @@
 <div id="boxCart">
 <b class="top"><b class="b1"></b><b class="b2"></b><b class="b3"></b><b class="b4"></b><b class="b5"></b></b>
 <div class="boxheader">
-<p>&nbsp;&raquo;&nbsp;<a href="{$LINK_CART}">{#heading_cart#}</a></p>
+<p>&nbsp;&raquo;&nbsp;<a href="{$LINK_CART}">[[Shopping Cart]]</a></p>
 </div>
 <div class="boxcontent">
 
@@ -18,18 +17,18 @@
 {/foreach}
 {if $DISCOUNT}
 <p class="CartContentRight">
-{#text_discount#}&nbsp;{$DISCOUNT}
+[[Discount]]&nbsp;{$DISCOUNT}
 </p>
 {/if}
 <p class="CartContentRight">
-{$UST}{#text_total#}&nbsp;<span>{$TOTAL}</span>
+{$UST}[[Sum]]&nbsp;<span>{$TOTAL}</span>
 </p>
 <p class="CartContentRight">
 {if $SHIPPING_INFO}{$SHIPPING_INFO}{/if}
 </p>
 {if $coupon_valid == 'true'}
 <p>
-{#cart_coupon#}
+[[Coupon:]]
 </p>
 <p>
 {$coupon_amount}
@@ -37,7 +36,7 @@
 {/if}              
 {else} <!-- Пустая корзина --> 
 <p>
-{#text_empty_cart#}
+[[You do not have any products in your shopping cart yet.]]
 </p>
 {/if}
 
