--- a/trunk/templates/vamshop/boxes/box_languages.html
+++ b/trunk/templates/vamshop/boxes/box_languages.html
@@ -1,7 +1,6 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
 <!-- Бокс языки -->
 <div id="boxLanguages">
-<h5>{#heading_languages#}</h5>
+<h5>[[Languages]]</h5>
 
 <div id="boxLanguagesContent">
 {$BOX_CONTENT}
