--- a/trunk/templates/vamshop/boxes/box_manufacturers.html
+++ b/trunk/templates/vamshop/boxes/box_manufacturers.html
@@ -1,7 +1,6 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
 <!-- Бокс производители -->
 <div id="boxManufacturers">
-<h5>{#heading_manufacturers#}</h5>
+<h5>[[Manufacturer]]</h5>
 
 <div id="boxManufacturersContent">
 {$BOX_CONTENT}
