--- a/trunk/templates/vamshop/boxes/box_reviews.html
+++ b/trunk/templates/vamshop/boxes/box_reviews.html
@@ -1,7 +1,6 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
 <!-- Бокс отзывы -->
 <div id="boxReviews">
-<h5>{#heading_reviews#}</h5>
+<h5>[[Reviews]]</h5>
 
 <div id="boxReviewsContent">
 {$BOX_CONTENT}
