--- a/trunk/templates/vamshop/boxes/box_specials.html
+++ b/trunk/templates/vamshop/boxes/box_specials.html
@@ -1,8 +1,6 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
-{config_load file="$language/lang_$language.conf" section="boxes"}
 <!-- Бокс скидки -->
 <div id="boxSpecials">
-<h5><a href="{$SPECIALS_LINK}">{#heading_specials#}</a></h5>
+<h5><a href="{$SPECIALS_LINK}">[[Special offers]]</a></h5>
 
 <div id="boxSpecialsContent">
 {if $box_content.PRODUCTS_IMAGE}
