--- a/trunk/templates/vamshop/boxes/box_whatsnew.html
+++ b/trunk/templates/vamshop/boxes/box_whatsnew.html
@@ -1,7 +1,6 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
 <!-- Бокс новинки -->
 <div id="boxWhatsNew">
-<h5><a href="{$LINK_NEW_PRODUCTS}">{#heading_whatsnew#}</a></h5>
+<h5><a href="{$LINK_NEW_PRODUCTS}">[[New Products]]</a></h5>
 
 <div id="boxWhatsNewContent">
 {if $box_content.PRODUCTS_IMAGE}
