--- a/templates/vamshop/boxes/box_add_a_quickie.html
+++ b/templates/vamshop/boxes/box_add_a_quickie.html
@@ -1,10 +1,9 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
 <!-- Бокс быстрый заказ -->
 <div id="boxAddQuickie">
-<h5>{#heading_add_a_quickie#}</h5>
+<h5>[[Quick purchase]]</h5>
 
 <div id="boxAddQuickieContent">
-{#text_quickie#}
+[[Please enter the article number from our catalogue.]]
 {$FORM_ACTION}
 <p class="addquickieform">{$INPUT_FIELD}</p>
 <div class="ajaxAddQuickie" id="ajaxAddQuickie" style="text-align: left;"></div>
