--- a/templates/vamshop/boxes/box_articles_new.html
+++ b/templates/vamshop/boxes/box_articles_new.html
@@ -1,7 +1,6 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
 <!-- Бокс новые статьи -->
 <div id="boxArticlesNew">
-<h5>{#heading_articles_new#}</h5>
+<h5>[[New articles]]</h5>
 
 <div id="boxArticlesNewContent">
 {foreach name=aussen item=articles from=$articles_content}
