--- a/templates/vamshop/boxes/box_categories.html
+++ b/templates/vamshop/boxes/box_categories.html
@@ -1,7 +1,6 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
 <!-- Бокс разделы -->
 <div id="boxCategories">
-<h5>{#heading_categories#}</h5>
+<h5>[[Categories]]</h5>
 
 <div id="categoriesBoxMenu">
 {$BOX_CONTENT}
