--- a/templates/vamshop/boxes/box_latest_news.html
+++ b/templates/vamshop/boxes/box_latest_news.html
@@ -1,7 +1,6 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
 <!-- Бокс новости -->
 <div id="boxNews">
-<h5><a href="{$NEWS_LINK}">{#heading_news#}</a></h5>
+<h5><a href="{$NEWS_LINK}">[[News]]</a></h5>
 
 <div class="boxNewsContent">
 {foreach name=aussen item=module_data from=$module_content}
