--- a/templates/vamshop/boxes/box_login.html
+++ b/templates/vamshop/boxes/box_login.html
@@ -1,21 +1,20 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
 <!-- Бокс вход -->
 <div id="boxLogin">
 <b class="top"><b class="b1"></b><b class="b2"></b><b class="b3"></b><b class="b4"></b><b class="b5"></b></b>
 <div class="boxheader">
-<p>&nbsp;&raquo;&nbsp;{#heading_login#}</p>
+<p>&nbsp;&raquo;&nbsp;[[Welcome back!]]</p>
 </div>
 <div class="boxcontent">
 
 {$FORM_ACTION}
 <p>
-{#text_email#}:
+[[eMail Address]]:
 </p>
 <p class="loginform">
 {$FIELD_EMAIL}
 </p>
 <p>
-{#text_pwd#}:
+[[Password]]:
 </p>
 <p class="loginform">
 {$FIELD_PWD}
@@ -25,7 +24,7 @@
 </p>
 {$FORM_END}
 <p class="LoginContentCenter">
-<a href="{$LINK_NEW_ACCOUNT}">{#text_register#}</a> | <a href="{$LINK_LOST_PASSWORD}">{#text_password_forgotten#}</a>
+<a href="{$LINK_NEW_ACCOUNT}">[[New account]]</a> | <a href="{$LINK_LOST_PASSWORD}">[[Password forgotten?]]</a>
 </p>
 
 </div>
