--- a/templates/vamshop/boxes/box_newsletter.html
+++ b/templates/vamshop/boxes/box_newsletter.html
@@ -1,10 +1,9 @@
-{config_load file="$language/lang_$language.conf" section="boxes"}
 <!-- Бокс рассылки -->
 <div id="boxNewsletter">
-<h5>{#heading_guestnewsletter#}</h5>
+<h5>[[Newsletter Subscribing!]]</h5>
 
 <div id="boxNewsletterContent">
-{#text_email#}
+[[eMail Address]]
 {$FORM_ACTION}
 <p class="newsletterform">{$FIELD_EMAIL}</p>
 {$BUTTON}
