--- a/templates/vamshop/module/account_history.html
+++ b/templates/vamshop/module/account_history.html
@@ -1,21 +1,20 @@
-{config_load file="$language/lang_$language.conf" section="account_history"}
-<h1>{#heading_history#}</h1>
+<h1>[[Your completed orders]]</h1>
 <!-- Список заказов -->
 {foreach name=aussen item=order_data from=$order_content}
 <div class="page">
 <b class="b1"></b><b class="b2"></b><b class="b3"></b><b class="b4"></b>
 <div class="pagecontent">
 <p>
-{#text_oid#} {$order_data.ORDER_ID}
+[[Order number:]] {$order_data.ORDER_ID}
 </p>
 <p>
-{#text_date#} {$order_data.ORDER_DATE}
+[[Date of order:]] {$order_data.ORDER_DATE}
 </p>
 <p>
-{#text_articles#} {$order_data.ORDER_PRODUCTS}
+[[Items:]] {$order_data.ORDER_PRODUCTS}
 </p>
 <p>
-{#text_total#} {$order_data.ORDER_TOTAL}&nbsp;&nbsp;{#text_status#} {$order_data.ORDER_STATUS} 
+[[Total:]] {$order_data.ORDER_TOTAL}&nbsp;&nbsp;[[Order status:]] {$order_data.ORDER_STATUS} 
 </p>
 <p>
 {$order_data.ORDER_BUTTON}
