--- a/templates/vamshop/module/checkout_shipping.html
+++ b/templates/vamshop/module/checkout_shipping.html
@@ -1,11 +1,10 @@
-{config_load file="$language/lang_$language.conf" section="checkout_shipping"}
-<h1>{#heading_shipping#}</h1>
+<h1>[[Shipping Method]]</h1>
 {$FORM_ACTION}<div class="page">
 <b class="b1"></b><b class="b2"></b><b class="b3"></b><b class="b4"></b>
 <div class="pagecontent">
 
 {if $SHIPPING_ADDRESS=='true'} 
-<span class="bold">{#title_address#}</span>
+<span class="bold">[[Mailing address:]]</span>
 {/if}
 
 {if $SHIPPING_ADDRESS=='true'} 
@@ -15,7 +14,7 @@
 </dt>
 
 <dd class="AddressBook">
-{#text_addressbook#}
+[[Please choose from your address book the desired mailing address for your order.]]
 </dd>
 
 <dd class="AddressBook">
@@ -28,7 +27,7 @@
 <!-- Адрес по умолчанию -->
 <dl class="AddressBook">
 <dt class="AddressBook">
-<span class="bold">{#title_address#}</span>
+<span class="bold">[[Default Address]]</span>
 <br />
 <img src="{$tpl_path}img/arrow_south_east.gif" alt="" />
 </dt>
@@ -42,20 +41,20 @@
 <div class="clear"></div>
 {/if}
 
-<span class="bold">{#title_shipping#}</span>
+<span class="bold">[[Shipping Method:]]</span>
 <br />
 <br />
 <fieldset class="form">
-<legend>{#text_shipping#}</legend>
+<legend>[[Please choose the desired mode of delivery for your order.]]</legend>
 {$SHIPPING_BLOCK}
 </fieldset>
 
 <p>
-<span class="bold">{#title_continue#}</span>
+<span class="bold">[[Continuation the ordering procedure]]</span>
 </p>
 
 <p>
-{#text_continue#}
+[[to the selection of the desired mode of payment.]]
 </p>
 </div>
 <b class="b4b"></b><b class="b3b"></b><b class="b2b"></b><b class="b1b"></b>
